--- a/ruins-node/package.json
+++ b/ruins-node/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.9.3",
     "uuid": "^9.0.1"
   }
 }
