--- a/ruins-next/.eslintrc.json
+++ b/ruins-next/.eslintrc.json
@@ -1,47 +1,56 @@
 {
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
   "env": {
-    "browser": true,
-    "node": true,
-    "es6": true
+    "commonjs": false,
+    "es6": true,
+    "node": true
+  },
+  "extends": [
+    "prettier",
+    "eslint:recommended",
+    "plugin:node/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings"
+  ],
+  "plugins": ["prettier", "import", "node"],
+  "parserOptions": {
+    "ecmaVersion": 2022
   },
   "settings": {
-    "react": {
-      "version": "detect"
-    },
     "import/resolver": {
       "alias": {
         "map": [
-          ["@", "."]
+          ["##", "./"],
+          ["#configs", "./configs/"],
+          ["#data", "./data/"],
+          ["#db-helpers", "./db-helpers/"],
+          ["#middlewares", "./middlewares/"],
+          ["#services", "./services/"],
+          ["#utils", "./utils/"]
         ],
-        "extensions": [".js", ".jsx", ".ts", ".tsx", ".css", ".module.css", ".scss", ".json"]
+        "extensions": [".js", ".json"]
       }
     }
   },
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:react-hooks/recommended",
-    "plugin:jsx-a11y/recommended",
-    "plugin:import/errors",
-    "next",
-    "next/core-web-vitals",
-    "prettier"
-  ],
-  "plugins": ["jsx-a11y", "react", "react-hooks", "prettier"],
   "rules": {
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
-    "react/react-in-jsx-scope": "off",
-    "jsx-a11y/anchor-is-valid": "off",
-    "react/prop-types": "off",
-    "prettier/prettier": "warn",
-    "no-unused-vars": "warn"
+    "prettier/prettier": "error",
+    "node/exports-style": ["error", "module.exports"],
+    "node/file-extension-in-import": ["error", "always"],
+    "node/prefer-global/buffer": ["error", "always"],
+    "node/prefer-global/console": ["error", "always"],
+    "node/prefer-global/process": ["error", "always"],
+    "node/prefer-global/url-search-params": ["error", "always"],
+    "node/prefer-global/url": ["error", "always"],
+    "node/prefer-promises/dns": "error",
+    "node/prefer-promises/fs": "error",
+    "no-unused-vars": "warn",
+    "node/no-unsupported-features/es-syntax": [
+      "warn",
+      {
+        "ignores": ["dynamicImport", "modules"]
+      }
+    ],
+    "node/no-missing-require": "off",
+    "node/no-extraneous-import": "off",
+    "node/no-missing-import": "off"
   }
 }
