--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "remixicon": "^4.2.0",
+    "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.10.7",
     "zod": "^3.22.4"
   },
