--- a/ruins-node/package.json
+++ b/ruins-node/package.json
@@ -17,6 +17,8 @@
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.3",
+    "peerjs": "^1.5.2",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   }
 }
