--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@remixicon/react": "^4.2.0",
+    "@tanstack/react-query": "^5.29.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +20,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.28.11",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.1",
     "postcss": "^8.4.38",
