--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+.DS_Store
 ruins-next/public/images/
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
@@ -23,7 +23,7 @@ package-lock.json
 /build
 
 # misc
-
+.DS_Store
 *.pem
 
 # debug
