--- a/ruins-next/.gitignore
+++ b/ruins-next/.gitignore
@@ -2,13 +2,12 @@
 
 # dependencies
 /node_modules 
-package-lock.json
+/package-lock.json
 /.pnp
 .pnp.js
 .yarn/install-state.gz
-package-lock.json 
 /.vscode/
-firebase.js
+/pages/member/account/firebase.js
 
 # testing
 /coverage
