--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.0.1",
+    "@react-three/fiber": "^8.16.1",
     "@remixicon/react": "^4.2.0",
-    "dayjs": "^1.11.10",
     "@tanstack/react-query": "^5.29.0",
+    "dayjs": "^1.11.10",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
@@ -19,12 +21,12 @@
     "remixicon": "^4.2.0",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.10.7",
+    "three": "^0.163.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.28.11",
     "autoprefixer": "^10.4.19",
-    "daisyui": "^4.10.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
