--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.10",
     "firebase": "^10.10.0",
     "next": "14.1.4",
+    "peerjs": "^1.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
@@ -21,6 +22,7 @@
     "remixicon": "^4.2.0",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.10.7",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
