--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.10",
     "firebase": "^10.10.0",
     "next": "14.1.4",
+    "peerjs": "^1.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
@@ -24,6 +25,7 @@
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.10.7",
     "three": "^0.163.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
