--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -20,13 +20,12 @@
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "remixicon": "^4.2.0",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.10.7",
-
-    "uuid": "^9.0.1",
-
+    "sweetalert2-react-content": "^5.0.7",
     "three": "^0.163.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
