--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.28.11",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.10.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
