--- a/ruins-node/package.json
+++ b/ruins-node/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
