--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -15,6 +15,8 @@
     "@tanstack/react-query": "^5.29.0",
     "dayjs": "^1.11.10",
     "firebase": "^10.10.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "next": "14.1.4",
     "peerjs": "^1.5.2",
     "react": "^18",
