--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.16.1",
     "@remixicon/react": "^4.2.0",
     "@tanstack/react-query": "^5.29.0",
+    "@tinymce/tinymce-react": "^5.0.1",
     "dayjs": "^1.11.10",
     "firebase": "^10.10.0",
     "next": "14.1.4",
@@ -24,11 +25,9 @@
     "remixicon": "^4.2.0",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.10.7",
-
-    "uuid": "^9.0.1",
-
+    "swiper": "^11.1.1",
     "three": "^0.163.0",
-
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
