--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -19,10 +19,11 @@
     "dayjs": "^1.11.10",
     "fbxloader": "^0.0.1-security",
     "firebase": "^10.10.0",
-    "lodash": "^4.17.21",
-    "lodash.debounce": "^4.0.8",
+    "framer-motion": "^11.1.5",
     "html2canvas": "^1.4.1",
     "leva": "^0.9.35",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "next": "14.1.4",
     "peerjs": "^1.5.2",
     "r3f-perf": "^7.2.1",
@@ -34,10 +35,8 @@
     "remixicon": "^4.2.0",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.10.7",
-    "swiper": "^11.1.1",
-
     "sweetalert2-react-content": "^5.0.7",
-
+    "swiper": "^11.1.1",
     "three": "^0.163.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
