--- a/ruins-node/package.json
+++ b/ruins-node/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon --env-file=dev.env index.js",
+    "socket": "nodemon socket_server.js",
     "start": "node --env-file=production.env index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
