--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -37,6 +37,7 @@
     "sweetalert2": "^11.10.7",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.1",
+    "tailwind-scrollbar": "^3.1.0",
     "three": "^0.163.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
