--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.10.0",
     "framer-motion": "^11.1.5",
     "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
