--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@react-three/a11y": "^3.0.0",
     "@react-three/drei": "^9.0.1",
     "@react-three/fiber": "^8.16.1",
