--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@react-three/a11y": "^3.0.0",
     "@react-three/drei": "^9.0.1",
     "@react-three/fiber": "^8.16.1",
@@ -16,11 +17,13 @@
     "@remixicon/react": "^4.2.0",
     "@tanstack/react-query": "^5.29.0",
     "@tinymce/tinymce-react": "^5.0.1",
+    "dat.gui": "^0.7.9",
     "dayjs": "^1.11.10",
     "fbxloader": "^0.0.1-security",
     "firebase": "^10.10.0",
     "framer-motion": "^11.1.5",
     "html2canvas": "^1.4.1",
+    "lamina": "^1.1.23",
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
@@ -40,10 +43,12 @@
     "tailwind-scrollbar": "^3.1.0",
     "three": "^0.163.0",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.28.11",
+    "@types/three": "^0.163.0",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.1",
     "eslint": "^8.57.0",
