--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-spring/web": "^9.7.3",
     "@googlemaps/js-api-loader": "^1.16.6",
+    "@react-spring/web": "^9.7.3",
     "@react-three/a11y": "^3.0.0",
     "@react-three/drei": "^9.0.1",
     "@react-three/fiber": "^8.16.1",
@@ -20,12 +20,13 @@
     "@tinymce/tinymce-react": "^5.0.1",
     "dat.gui": "^0.7.9",
     "dayjs": "^1.11.10",
+    "embla-carousel-react": "^8.0.2",
     "fbxloader": "^0.0.1-security",
     "firebase": "^10.10.0",
     "framer-motion": "^11.1.5",
     "html2canvas": "^1.4.1",
-    "lamina": "^1.1.23",
     "jsonwebtoken": "^9.0.2",
+    "lamina": "^1.1.23",
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
