--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-spring/web": "^9.7.3",
+    "@dimforge/rapier3d-compat": "^0.12.0",
     "@googlemaps/js-api-loader": "^1.16.6",
+    "@react-spring/web": "^9.7.3",
     "@react-three/a11y": "^3.0.0",
+    "@react-three/cannon": "^3.1.2",
     "@react-three/drei": "^9.0.1",
-    "@react-three/fiber": "^8.16.1",
+    "@react-three/fiber": "^8.16.2",
     "@react-three/rapier": "^1.3.1",
     "@remixicon/react": "^4.2.0",
     "@tanstack/react-query": "^5.29.0",
@@ -24,8 +26,8 @@
     "firebase": "^10.10.0",
     "framer-motion": "^11.1.5",
     "html2canvas": "^1.4.1",
-    "lamina": "^1.1.23",
     "jsonwebtoken": "^9.0.2",
+    "lamina": "^1.1.23",
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
@@ -33,7 +35,7 @@
     "peerjs": "^1.5.2",
     "r3f-perf": "^7.2.1",
     "react": "^18",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
