--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -20,6 +20,7 @@
     "@remixicon/react": "^4.2.0",
     "@tanstack/react-query": "^5.29.0",
     "@tinymce/tinymce-react": "^5.0.1",
+    "@tweenjs/tween.js": "^18.6.0",
     "dat.gui": "^0.7.9",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.2",
