--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -37,10 +37,12 @@
     "peerjs": "^1.5.2",
     "r3f-perf": "^7.2.1",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "remixicon": "^4.2.0",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.10.7",
