--- a/ruins-node/dev.env
+++ b/ruins-node/dev.env
@@ -1,11 +1,18 @@
 WEB_PORT=3001
 
+# 線上資料庫
 DB_HOST=sql.freedb.tech
-#DB_HOST=192.168.35.102
-
 DB_USER=freedb_shuntei
 DB_PASS=H6X5QjkKpb7$XUB
 DB_NAME=freedb_ruins_final
+
+#DB_HOST=192.168.35.102
+
+# DB_HOST=127.0.0.1
+# DB_USER=root
+# DB_PASS=
+# DB_NAME=ruins_final
+
 JWT_SECRET=ruins789!@
 
 
