--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -33,7 +33,7 @@
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
-    "next": "14.1.4",
+    "next": "^14.1.4",
     "peerjs": "^1.5.2",
     "r3f-perf": "^7.2.1",
     "react": "^18",
