--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-build": "next build"
   },
   "dependencies": {
     "@dimforge/rapier3d-compat": "^0.12.0",
