--- a/ruins-next/package.json
+++ b/ruins-next/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "vercel-build": "next build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@dimforge/rapier3d-compat": "^0.12.0",
